# force_computation_2D_electrostatics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  force_calculation.cpp
build1/: CMakeCache.txt  Makefile  cmake_install.cmake  eigvecs.txt  lowrank_approx_circle.txt  quad_approx_circle.py  quad_approx_circle.txt  velapprox.txt
build1/examples/: Makefile  cmake_install.cmake
examples/: CMakeLists.txt  annular_dvp_fcsc.cpp  circle_conductor.cpp  concentric_circles_fourier.py  double_integral.cpp  force_example.cpp  gramian_matrix.cpp  kite_conductor.cpp  model_problem_3.cpp  model_problem_4.cpp  model_problem_5.cpp  model_problem_5_force.cpp  model_problem_5_poly.cpp  model_problem_5_sin.cpp  model_problem_5_soln.cpp  model_problem_6_cos.cpp  model_problem_6_poly.cpp  model_problem_7.cpp  model_problem_7_cos.cpp  model_problem_7_poly.cpp  model_problem_8_poly.cpp  model_problem_8_sin.cpp  model_problem_9_poly.cpp  model_problem_9_sin.cpp  mp7_soln.py  pacman_traces.cpp  quad_approx.cpp  quad_approx_circle.cpp  single_kite.cpp  single_square.cpp  sqkite_bdry_force.cpp  square_conductor.cpp  square_conductor_g.cpp  square_kite_gipsy.cpp  square_kite_gipsy_sin.cpp  triangle_conductor.cpp  wtf.cpp
force_computation_results/kite/: kc1_0_0  kc2_0_0  kc3_0_0
force_computation_results/triangle/: tc1_0_0  tc2_0_0  tc3_0_0
include/: force_calculation.hpp  force_calculation1.hpp  force_calculation_not_linear.hpp  shape_calculus.hpp  velocity_fields.hpp
submodules/2DParametricBEM/examples/: CMakeLists.txt  README.md  annular_dvp.cpp  annulardvp.py  dirichlet_example.cpp
submodules/2DParametricBEM/include/: abstract_bem_space.hpp  continuous_space.hpp  dirichlet.hpp  discontinuous_space.hpp  double_layer.hpp  gauleg.hpp  hypersingular.hpp  parametrized_fourier_sum.hpp  parametrized_polynomial.hpp
submodules/2DParametricBEM/src/: CMakeLists.txt  double_layer.cpp  hypersingular.cpp  single_layer.cpp
submodules/2DParametricBEM/src/Parametrizations/: parametrized_circular_arc.cpp
submodules/2DParametricBEM/test/: CMakeLists.txt  convergence_plot.py  convergence_test.cpp  convergence_test_panels.cpp  dfkcheck.py  logweight.cpp  tests.cpp
