cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
#set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS "-std=c++11")
add_definitions(-DMM=$(mm) -DNN=$(nn) -DVEL=$(vel))

include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/external/2DParametricBEM/include)
#include_directories(${PROJECT_SOURCE_DIR}/external/Code/BEM/CppHilbert/Library/source)
include_directories(/usr/include/eigen3)

add_executable(dinteg double_integral.cpp)
add_executable(force force_example.cpp)
add_executable(annulardvpfcsc annular_dvp_fcsc.cpp)
add_executable(mp3 model_problem_3.cpp)
add_executable(mp4 model_problem_4.cpp)
add_executable(mp5 model_problem_5.cpp)
add_executable(mp6poly model_problem_6_poly.cpp)
add_executable(mp6cos model_problem_6_cos.cpp)
add_executable(mp5poly model_problem_5_poly.cpp)
add_executable(mp5sin model_problem_5_sin.cpp)
add_executable(mp5force model_problem_5_force.cpp)
add_executable(gramat gramian_matrix.cpp)
add_executable(mp7 model_problem_7.cpp)
add_executable(pac pacman_traces.cpp)
add_executable(mp7cos model_problem_7_cos.cpp)
add_executable(mp7poly model_problem_7_poly.cpp)
add_executable(mp8sin model_problem_8_sin.cpp)
add_executable(mp8poly model_problem_8_poly.cpp)
add_executable(mp9sin model_problem_9_sin.cpp)
add_executable(mp9poly model_problem_9_poly.cpp)
add_executable(wtf wtf.cpp)
add_executable(mp5sol model_problem_5_soln.cpp)
add_executable(tri_cond triangle_conductor.cpp)
add_executable(kite_cond kite_conductor.cpp)
add_executable(square_cond square_conductor.cpp)
add_executable(circ_cond circle_conductor.cpp)
add_executable(single_square single_square.cpp)
add_executable(single_kite single_kite.cpp)
add_executable(sq_kite_gip square_kite_gipsy.cpp)
add_executable(sq_kite_gip_sin square_kite_gipsy_sin.cpp)
add_executable(sq_cond_g square_conductor_g.cpp)

target_link_libraries(dinteg parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(force parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(annulardvpfcsc parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp3 parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp4 parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp5 parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp5poly parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp5sin parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp5force parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp6poly parametrizations adj_double_layer hypersingular single_layer double_layer quadrature )
target_link_libraries(mp6cos parametrizations adj_double_layer hypersingular single_layer double_layer quadrature )
target_link_libraries(gramat parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp7 parametrizations adj_double_layer hypersingular single_layer double_layer quadrature )
target_link_libraries(pac parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp7 parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp7cos parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp7poly parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp8sin parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp8poly parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp9sin parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(mp9poly parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(wtf parametrizations adj_double_layer hypersingular single_layer double_layer quadrature )
target_link_libraries(mp5sol parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(tri_cond parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(kite_cond parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(square_cond parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(circ_cond parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(single_square parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(single_kite parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(sq_kite_gip parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(sq_kite_gip_sin parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
target_link_libraries(sq_cond_g parametrizations adj_double_layer hypersingular single_layer double_layer quadrature)
